# FPA

./: .gitignore  Cargo.toml  Dev.csv  README.md  Test  app.py  brisqi.backup  download(1).CSV  download.CSV  stored_ideas.md
.github/workflows/: README.md  build.yml
config/: settings.json  themes.json  weights.json  weights.txt
core/: backup.py  config_manager.py  csv_storage.py  models.py
docs/: industrial_design_system.md
installer/: main.py
scoring/: scoring.py
src/: backup.rs  cli.rs  config.rs  main.rs  models.rs  scoring.rs  storage.rs  ui_app.rs
ui/: __init__.py  main_app.py
