[package]
name = "finance_planner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
directories = "5"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
eframe = { version = "0.28", features = ["default_fonts", "glow"] }
egui = "0.28"
rfd = "0.13"
